[#noissue] Refactor AgentStatService