@@ -19,9 +19,9 @@ package com.navercorp.pinpoint.inspector.collector.model.kafka;
 
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 import com.fasterxml.jackson.databind.ser.std.ToStringSerializer;
+import com.navercorp.pinpoint.common.server.util.StringPrecondition;
 import com.navercorp.pinpoint.metric.common.model.Tag;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -29,34 +29,34 @@ import java.util.List;
  */
 public class AgentStat {
 
-    static final List<Tag> EMPTY_TAGS = Collections.emptyList();
+    static final List<Tag> EMPTY_TAGS = List.of();
 
     private final String tenantId;
-    private final String sortKey;
+    private final long timestamp;
     private final String applicationName;
     private final String agentId;
+    private final String sortKey;
     private final String metricName;
     private final String fieldName;
     private final double fieldValue;
     private final List<Tag> tags;
-    private final long eventTime;
 
-    public AgentStat(String tenantId, String sortKey, String applicationName, String agentId, String metricName, String fieldName, double fieldValue, long eventTime) {
-        this(tenantId, sortKey, applicationName, agentId, metricName, fieldName, fieldValue, eventTime, EMPTY_TAGS);
-    }
 
-    public AgentStat(String tenantId, String sortKey, String applicationName, String agentId, String metricName, String fieldName, double fieldValue, long eventTime, List<Tag> tags) {
+    public AgentStat(String tenantId, long timestamp, String applicationName, String agentId,
+                     String sortKey,
+                     String metricName, String fieldName, double fieldValue, List<Tag> tags) {
         this.tenantId = tenantId;
+        this.timestamp = timestamp;
         this.sortKey = sortKey;
-        this.applicationName = applicationName;
-        this.agentId = agentId;
+        this.applicationName = StringPrecondition.requireHasLength(applicationName, "applicationName");
+        this.agentId = StringPrecondition.requireHasLength(agentId, "agentId");
         this.metricName = metricName;
         this.fieldName = fieldName;
         this.fieldValue = fieldValue;
-        this.eventTime = eventTime;
         this.tags = tags;
     }
 
+    @Deprecated
     public String getTenantId() {
         return tenantId;
     }
@@ -82,7 +82,7 @@ public class AgentStat {
     }
 
     public long getEventTime() {
-        return eventTime;
+        return timestamp;
     }
 
     @JsonSerialize(contentUsing = ToStringSerializer.class)
